--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=a6b99d9ab6b48b23123c",
-    "/css/app.css": "/css/app.css?id=9639a06a4939775c2762",
-    "/js/theme.js": "/js/theme.js?id=7ea8528deb7221c0645a"
+    "/js/app.js": "/js/app.js?id=fb44aba3c38eace10d26",
+    "/css/app.css": "/css/app.css?id=74812ccf0e3047c95db6"
 }
