--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
     "hydraex/exchange": "dev-master",
     "laravel/framework": "5.8.*",
     "laravel/tinker": "~1.0",
+    "laravelcollective/html": "^5.7@dev",
+    "spatie/laravel-flash": "dev-master",
     "tightenco/ziggy": "^0.6.9"
   },
   "require-dev": {
