--- a/.env.example
+++ b/.env.example
@@ -24,21 +24,21 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.mailgun.org
+MAIL_PORT=587
+MAIL_USERNAME=
+MAIL_PASSWORD=-a5d1a068-163f3ba8
+MAIL_ENCRYPTION=tls
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
+MAIL_FROM_ADDRESS=admin@dexdev.ru
+MAILGUN_DOMAIN=
+MAILGUN_SECRET=
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
 
-MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+GOOGLE_RECAPTCHA_KEY=
+GOOGLE_RECAPTCHA_SECRET=
+
+TIME_TO_ESCROW_CANCEL=45
