--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "hydraex/exchange": "dev-master",
     "laravel/framework": "5.8.*",
     "laravel/tinker": "~1.0",
-    "laravelcollective/html": "^5.7@dev",
+    "rdehnhardt/html": "dev-master",
     "spatie/laravel-flash": "dev-master",
     "tightenco/ziggy": "^0.6.9"
   },
